@@ -5,8 +5,7 @@
 ## can remove it.  
 ##
 
-sum=$(( ${RVM_WITH_CLASSPATH_0_91-0} + \
-	${RVM_WITH_CLASSPATH_0_92-0} + \
+sum=$((	${RVM_WITH_CLASSPATH_0_92-0} + \
         ${RVM_WITH_CLASSPATH_CVS_HEAD-0} ))
 
 if (( sum == 0 )); then
